--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,5 @@
   "start_url": "inkhouse.studio",
   "display": "browser",
   "theme_color": "#FF9B54",
-  "background_color": "#FF9B54"
+  "background_color": "#6b7482"
 }
