--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,6 @@
   "icons": [],
   "start_url": "inkhouse.studio",
   "display": "browser",
-  "theme_color": "#FF9B54",
+  "theme_color": "#6b7482",
   "background_color": "#6b7482"
 }
