--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emailjs/browser": "^3.7.0",
     "@emotion/styled": "^11.9.3",
     "@mantine/core": "^5.1.5",
+    "@mantine/dropzone": "^5.5.0",
     "@mantine/hooks": "^5.1.5",
     "@mantine/notifications": "^5.1.5",
     "@mui/icons-material": "^5.8.4",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-rnd": "^10.3.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
