--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.9.1",
     "framer-motion": "^7.3.6",
     "html2canvas": "^1.4.1",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
