--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-react": "^1.10.2",
     "@emailjs/browser": "^3.7.0",
     "@emotion/styled": "^11.9.3",
+    "@mantine/carousel": "^5.8.2",
     "@mantine/core": "^5.5.5",
     "@mantine/dropzone": "^5.5.5",
     "@mantine/hooks": "^5.5.5",
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "embla-carousel-react": "^7.0.5",
     "firebase": "^9.9.1",
     "framer-motion": "^7.3.6",
     "html2canvas": "^1.4.1",
